[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art/ui/pos_tab_panel.png" type="Texture" id=1]
[ext_resource path="res://assets/font/NanumBarunpenB.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/DebugTab.gd" type="Script" id=3]
[ext_resource path="res://assets/art/ui/cancel_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/art/ui/cancel.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[node name="DebugTab" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 274.915
margin_top = 97.6473
margin_right = 1634.92
margin_bottom = 917.647
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 568.347
margin_top = 108.831
margin_right = 795.347
margin_bottom = 181.831
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Debug Tab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 147.122
margin_top = 222.122
margin_right = 1137.12
margin_bottom = 693.122
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
margin_left = 1129.2
margin_top = 123.471
margin_right = 1193.2
margin_bottom = 187.471
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Productdbg" type="Button" parent="TextureRect"]
margin_left = 252.474
margin_top = 17.6845
margin_right = 535.474
margin_bottom = 85.6845
custom_fonts/font = SubResource( 2 )
text = "Product Debug"

[node name="Displaydbg" type="Button" parent="TextureRect"]
margin_left = 566.481
margin_top = 18.3568
margin_right = 949.481
margin_bottom = 86.3568
custom_fonts/font = SubResource( 2 )
text = "DisplayStand Debug"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureRect/Productdbg" to="." method="_on_Productdbg_pressed"]
[connection signal="pressed" from="TextureRect/Displaydbg" to="." method="_on_Displaydbg_pressed"]
